--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Trancista Cida </title>
-    <link rel="icon" href="./img/icon.png" type="image/x-icon">
+    <link rel="icon" href="/img/icon.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
